@@ -4,9 +4,9 @@ import urllib, urllib2
 
 __plugin__ = 'VideoDevil'
 __author__ = 'sfaxman'
-__svn_url__ = 'http://xbmc-addons.googlecode.com/svn/trunk/plugins/video/VideoDevil/'
+__svn_url__ = 'http://xbmc-adult.googlecode.com/svn/trunk/plugin.video.videodevil/'
 __credits__ = 'bootsy'
-__version__ = '1.6.8'
+__version__ = '1.6.9'
 
 addon = xbmcaddon.Addon(id='plugin.video.videodevil')
 rootDir = addon.getAddonInfo('path')
